--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,20 @@
   <title>Animations!</title>
 </head>
 <body>
-  This is the animations testing ground
+  <header>
+    <h1>Animations!</h1>
+    <nav>
+
+    </nav>
+  </header>
+  <div class="container">
+    <div class="animationPlace gridCenter">
+      <div class="box" id="box2"></div>
+    </div>
+    <div class="animationPlace">
+
+    </div>
+  </div>
   <script src="assets/js/home.js"></script>
 </body>
 </html>
