--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,6 @@
 
     </div>
   </div>
-  <script src="assets/js/home.js"></script>
+  <script src="assets/js/character.js"></script>
 </body>
 </html>
