--- a/public/index.html
+++ b/public/index.html
@@ -4,24 +4,31 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="assets/css/home.css">
+  <link rel="stylesheet" href="assets/css/style.css">
   <title>Animations!</title>
 </head>
 <body>
   <header>
     <h1>Animations!</h1>
     <nav>
-
+      <ul class="nav-ul">
+        <li>
+          <a class="navLink activeLink" href="/">Home</a>
+        </li>
+        <li>
+          <a class="navLink" href="/sprite">Sprite</a>
+        </li>
+        <li>
+          <a class="navLink" href="/loading">Loading</a>
+        </li>
+      </ul>
     </nav>
   </header>
   <div class="container">
-    <div class="animationPlace gridCenter">
-      <div class="box" id="box2"></div>
-    </div>
-    <div class="animationPlace">
-
+    <div class="wrapper">
+      <h2>Welcome!</h2>
+      <p>This site is just a place where I test out different animations and transitions for my pages. I have been working on stuff like this for awhile without making a real repo/website out of it, and I thought that I might as well do it since I spend enough time on it anyway. Please feel free to use any of the animations you would like to use. I will try and make the code readable so you can find what you are looking for! I will also link the github page so you can clone the repo if you like! </p>
     </div>
   </div>
-  <script src="assets/js/character.js"></script>
 </body>
 </html>
