added in landing page

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/home.css">
   <title>Animations!</title>
 </head>
 <body>
@@ -27,7 +28,12 @@
   <div class="container">
     <div class="wrapper">
       <h2>Welcome!</h2>
-      <p>This site is just a place where I test out different animations and transitions for my pages. I have been working on stuff like this for awhile without making a real repo/website out of it, and I thought that I might as well do it since I spend enough time on it anyway. Please feel free to use any of the animations you would like to use. I will try and make the code readable so you can find what you are looking for! I will also link the github page so you can clone the repo if you like! </p>
+      <p>This site is just a place where I test out different animations and transitions for my pages. I have been working on stuff like this for awhile without making a real repo/website out of it, and I thought that I might as well do it. I spend enough time on it anyway. Please feel free to use any of the animations you would like to use. I will try and make the code readable so you can find what you are looking for! I will also link the github page so you can clone the repo if you like! </p>
+    </div>
+    <div class="animationPlace">
+      <div class="holder">
+        <div class="box"></div>
+      </div>
     </div>
   </div>
 </body>
