added in rolling dots loading animation

--- a/public/loading.html
+++ b/public/loading.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/loading.css">
   <title>Loading Animations</title>
 </head>
 
@@ -28,8 +29,19 @@
   </header>
 
   <div class="container">
-
+    <section>
+      <h3>Loading Dots</h3>
+      <div class="loadingBox">
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+      </div>
+    </section>
   </div>
+
+  <script src="assets/js/loading.js"></script>
 </body>
 
 </html>
