added scrolling page and one scroll animation

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,9 @@
         <li>
           <a class="navLink" href="/loading">Loading</a>
         </li>
+        <li>
+          <a href="/scroll" class="navLink">Scroll</a>
+        </li>
       </ul>
     </nav>
   </header>
