--- a/public/loading.html
+++ b/public/loading.html
@@ -24,6 +24,9 @@
         <li>
           <a class="navLink activeLink" href="/loading">Loading</a>
         </li>
+        <li>
+          <a href="/scroll" class="navLink">Scroll</a>
+        </li>
       </ul>
     </nav>
   </header>
