--- a/public/scroll.html
+++ b/public/scroll.html
@@ -1,42 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="assets/css/style.css">
-  <link rel="stylesheet" href="assets/css/sprite.css">
-  <title>Sprite Animation</title>
+  <link rel="stylesheet" href="assets/css/scroll.css">
+  <title>Scroll</title>
 </head>
-
 <body>
   <header>
-    <h1>Sprite Animation</h1>
+    <h1>Scroll Animations!</h1>
     <nav>
       <ul class="nav-ul">
         <li>
           <a class="navLink" href="/">Home</a>
         </li>
         <li>
-          <a class="navLink activeLink" href="/sprite">Sprite</a>
+          <a class="navLink" href="/sprite">Sprite</a>
         </li>
         <li>
           <a class="navLink" href="/loading">Loading</a>
         </li>
         <li>
-          <a href="/scroll" class="navLink">Scroll</a>
+          <a href="/scroll" class="navLink activeLink">Scroll</a>
         </li>
       </ul>
     </nav>
   </header>
-  <div class="container">
-    <div class="animationPlace gridCenter">
-      <div class="box" id="box2"></div>
-    </div>
+
+  <div class="container-scroll">
+    <div class="line line1" id="line1"></div>
+    <div class="line line2" id="line2"></div>
+    <div class="line line3" id="line3"></div>
   </div>
 
-  <script src="assets/js/sprite.js"></script>
-</body>
 
+  <script src="assets/js/scroll.js"></script>
+</body>
 </html>
